Adding new project and images

--- a/index.html
+++ b/index.html
@@ -119,6 +119,30 @@
 										<li><a href="https://github.com/Dunttus/SaltProject" target="_blank" class="button small">Github sivu</a></li>
 									</ul>
 								</article>
+                                                                <article>
+                                                                        <header>
+                                                                                <span class="date">3.6.2019</span>
+                                                                                <h2>Windows<br />
+                                                                                asennukset</h2>
+                                                                        </header>
+                                                                        <a class="image fit"><img src="images/portfolio08.png" alt="" /></a>
+                                                                        <p>Opiskella Windows asennnuksia ja Active Directoryyn tunkeutumista ulkopuolelta. Käytetyt teknilogiat mm. Windows 2019, Windows 10,.</p>
+                                                                        <ul class="actions special">
+                                                                                <li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
+                                                                        </ul>
+                                                                </article>
+                                                                <article>
+                                                                        <header>
+                                                                                <span class="date">5.6.2020</span>
+                                                                                <h2>Omat<br />
+                                                                                kuvio taustat</h2>
+                                                                        </header>
+                                                                        <a class="image fit"><img src="images/portfolio09.png" alt="" /></a>
+                                                                        <p>Oma tekemien kuvio taustakuvien jakamis sivu. Käytetyt teknilogiat mm. Virtualhosting, GIMP ja Paint. </p>
+                                                                        <ul class="actions special">
+                                                                                <li><a href="http://patterns.dunttus.com" target="_blank" class="button small">Kotisivu</a></li>
+                                                                        </ul>
+                                                                </article>
 								<article>
 									<header>
 										<span class="date">25.5.2019</span>
@@ -152,7 +176,7 @@
 				<em>&copy; Joni Hakala, portfolio design from: HTML5 UP</em>
 			</div>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
