Newest version of working patterns

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -24,7 +24,7 @@
 					<div id="intro">
 						<h1>Dunttus<br />
 						patterns</h1>
-						<p>Im computer science student from Finland and doin patterns just for fun.</p>
+						<p>I'm a computer science student from Finland and I'm creating background patterns just for fun.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
