Adding new pattern images

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -70,7 +70,7 @@
 								</header>
 								<a class="image main"><img src="images/dunttus_patterns_1.PNG" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="images/dunttus_patterns_1.PNG" target="_blank" class="button large">Link to full image</a></li>
+									<li><a href="images/full_images/dunttus_patterns_1.PNG" target="_blank" class="button large">Link to full image</a></li>
 								</ul>
 							</article>
 						<!-- Posts -->
@@ -615,7 +615,46 @@
 										<li><a href="images/full_images/dunttus_patterns_55.PNG" target="_blank" class="button small">Link to full image</a></li>
 									</ul>
 								</article>
-
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										56</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_56.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_56.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										57</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_57.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_57.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										58</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_58.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_58.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										59</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_59.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_59.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
 							</section>
 			</div>
 			<!-- Copyright for site design -->
