New pattern theme for main site and new patterns

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -8,14 +8,18 @@
 <html>
 	<head>
 		<link rel="shortcut icon" href="images/favicon.ico">
-		<title>Joni Hakala</title>
+		<title>Dunttus patterns</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Hakukone optimointi -->
+		<meta name="description" content="dunttus free patterns">
+		<meta name="author" content="Joni Hakala">
+		<meta name="keywords" content="patterns, background images, free patterns, repeat patterns">
 	</head>
 	<body class="is-preload">
-		<button onclick="topFunction()" id="myBtn" class="fa fa-angle-up" title="Takaisin ylös"></button>
+		<button onclick="topFunction()" id="myBtn" class="fa fa-angle-up" title="Back to top"></button>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
@@ -653,6 +657,86 @@
 									<a class="image fit"><img src="images/dunttus_patterns_59.PNG" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="images/full_images/dunttus_patterns_59.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										60</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_60.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_60.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										61</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_61.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_61.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										62</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_62.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_62.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										63</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_63.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_63.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										64</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_64.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_64.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										65</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_65.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_65.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										66</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_66.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_66.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										59</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_67.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_67.PNG" target="_blank" class="button small">Link to full image</a></li>
 									</ul>
 								</article>
 							</section>
