--- a/patterns/index.html
+++ b/patterns/index.html
@@ -732,11 +732,51 @@
 								<article>
 									<header>
 										<h2>Pattern <br/>
-										59</h2>
+										67</h2>
 									</header>
 									<a class="image fit"><img src="images/dunttus_patterns_67.PNG" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="images/full_images/dunttus_patterns_67.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										68</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_68.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_68.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										69</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_69.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_69.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										70</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_70.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_70.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										71</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_71.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_71.PNG" target="_blank" class="button small">Link to full image</a></li>
 									</ul>
 								</article>
 							</section>
