Adding more patterns 72-83

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -779,14 +779,134 @@
 										<li><a href="images/full_images/dunttus_patterns_71.PNG" target="_blank" class="button small">Link to full image</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										72</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_72.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_72.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										73</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_73.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_73.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										74</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_74.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_74.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										75</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_75.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_75.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										76</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_76.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_76.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										77</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_77.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_77.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										78</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_78.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_78.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										79</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_79.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_79.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										80</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_80.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_80.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										81</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_81.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_81.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										82</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_82.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_82.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										83</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_83.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_83.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
 							</section>
 			</div>
 			<!-- Copyright for site design -->
 			<div>
-				<em>&copy; Joni Hakala, portfolio design from: HTML5 UP</em>
+				<em>&copy; Joni Hakala, site layout design from: HTML5 UP</em>
 			</div>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
