Adding link to HackTheBox profile and fixing spelling errors

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -16,7 +16,7 @@
 		<!-- Hakukone optimointi -->
 		<meta name="description" content="dunttus free patterns">
 		<meta name="author" content="Joni Hakala">
-		<meta name="keywords" content="patterns, background images, free patterns, repeat patterns">
+		<meta name="keywords" content="patterns, background images, free patterns, repeat patterns, easy patterns, free textures">
 	</head>
 	<body class="is-preload">
 		<button onclick="topFunction()" id="myBtn" class="fa fa-angle-up" title="Back to top"></button>
