--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						Portfolio</h1>
 						<p>Olen 27-vuotias mies pääkaupunkiseudulta. Kiinnostuksen kohteisiin kuuluu aika paljolti 
 						kaikki tietotekniikan aihe alueista. Harastuksiini kuullu mm. WordPress blogi kirjoitukset, 
-						HackTheBox tunkeutumistestaus lipunryöstöt, oman kotisivun ylläpito, virtuaali- palvelin 
+						<a href="https://www.hackthebox.eu/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, oman kotisivun ylläpito, virtuaali- palvelin 
 						asennukset ja koiran kanssa lenkkeily.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -119,30 +119,30 @@
 										<li><a href="https://github.com/Dunttus/SaltProject" target="_blank" class="button small">Github sivu</a></li>
 									</ul>
 								</article>
-                                                                <article>
-                                                                        <header>
-                                                                                <span class="date">3.6.2019</span>
-                                                                                <h2>Windows<br />
-                                                                                asennukset</h2>
-                                                                        </header>
-                                                                        <a class="image fit"><img src="images/portfolio08.png" alt="" /></a>
-                                                                        <p>Opiskella Windows asennnuksia ja Active Directoryyn tunkeutumista ulkopuolelta. Käytetyt teknilogiat mm. Windows 2019, Windows 10,.</p>
-                                                                        <ul class="actions special">
-                                                                                <li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
-                                                                        </ul>
-                                                                </article>
-                                                                <article>
-                                                                        <header>
-                                                                                <span class="date">5.6.2020</span>
-                                                                                <h2>Omat<br />
-                                                                                kuvio taustat</h2>
-                                                                        </header>
-                                                                        <a class="image fit"><img src="images/portfolio09.png" alt="" /></a>
-                                                                        <p>Oma tekemien kuvio tausta kuvien jakamis sivu. Käytetyt teknilogiat mm. Virtualhosting, GIMP ja Paint. </p>
-                                                                        <ul class="actions special">
-                                                                                <li><a href="http://patterns.dunttus.com" target="_blank" class="button small">Kotisivu</a></li>
-                                                                        </ul>
-                                                                </article>
+								<article>
+										<header>
+												<span class="date">3.6.2019</span>
+												<h2>Windows<br />
+												asennukset</h2>
+										</header>
+										<a class="image fit"><img src="images/portfolio08.png" alt="" /></a>
+										<p>Opiskella Windows asennnuksia ja Active Directoryyn tunkeutumista ulkopuolelta. Käytetyt teknologiat mm. Windows 2019, Windows 10,.</p>
+										<ul class="actions special">
+												<li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
+										</ul>
+								</article>
+								<article>
+										<header>
+												<span class="date">9.6.2020</span>
+												<h2>Omat<br />
+												kuvio taustat</h2>
+										</header>
+										<a class="image fit"><img src="images/portfolio09.png" alt="" /></a>
+										<p>Oma tekemien kuvio tausta kuvien jakamis sivu. Käytetyt teknologiat mm. Virtualhosting, GIMP ja Paint. </p>
+										<ul class="actions special">
+												<li><a href="http://patterns.dunttus.com" target="_blank" class="button small">Kotisivu</a></li>
+										</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">25.5.2019</span>
@@ -150,7 +150,7 @@
 										alkeet</h2>
 									</header>
 									<a class="image fit"><img src="images/portfolio06.png" alt="" /></a>
-									<p>Opiskella tunkeutumistestausen alkeet. Käytetyt teknilogiat mm. Nmap, Vagrant, THCHydra, HashCat, SearchSploit, Gobuster, MitmProxy, FoxyProxy, EyeWitness, MetaSploit, HackTheBox.</p>
+									<p>Opiskella tunkeutumistestausen alkeet. Käytetyt teknologiat mm. Nmap, Vagrant, THCHydra, HashCat, SearchSploit, Gobuster, MitmProxy, FoxyProxy, EyeWitness, MetaSploit, HackTheBox.</p>
 									<ul class="actions special">
 										<li><a href="https://hakala.home.blog" target="_blank" class="button small">WordPress blogi</a></li>
 									</ul>
@@ -162,7 +162,7 @@
 										alkeet</h2>
 									</header>
 									<a class="image fit"><img src="images/portfolio07.png" alt="" /></a>
-									<p>Opiskella Linuxin alkeet. Käytetyt teknilogiat mm. Apache2, Mariabd, DigitalOcean, SSH, UFW, Sysstat, Python3, java, Bash, Debian, Xubuntu. </p>
+									<p>Opiskella Linuxin alkeet. Käytetyt teknologiat mm. Apache2, Mariabd, DigitalOcean, SSH, UFW, Sysstat, Python3, java, Bash, Debian, Xubuntu. </p>
 									<ul class="actions special">
 										<li><a href="https://hakala690012106.wordpress.com/blog/" target="_blank" class="button small">WordPress blogi</a></li>
 										<li><a href="/komentoja.txt" target="_blank" class="button small">Linux komentoja.txt</a></li>
