Adding 4 new patterns to patterns site

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -53,7 +53,7 @@
 						<!-- Featured Pattern -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">25.6.2020</span>
+									<span class="date">11.7.2020</span>
 									<h2>Free pattern images under Creative commons lincese</h2>
 									<p>All patterns can be used with repeat format as they are designed to go next to each other. As lisence states you can copy, modify, distribute even for commercial purposes, all without asking permission. See more information below.<br>
 										<h6>Lisence</h6>
@@ -937,6 +937,46 @@
 									<a class="image fit"><img src="images/dunttus_patterns_87.PNG" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="images/full_images/dunttus_patterns_87.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										88</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_88.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_88.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										89</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_89.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_89.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										90</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_90.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_90.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										91</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_91.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_91.PNG" target="_blank" class="button small">Link to full image</a></li>
 									</ul>
 								</article>
 							</section>
