Adding 4 new patterns

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -979,6 +979,46 @@
 										<li><a href="images/full_images/dunttus_patterns_91.PNG" target="_blank" class="button small">Link to full image</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										92</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_92.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_92.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										93</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_93.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_93.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										94</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_94.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_94.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Pattern <br/>
+										95</h2>
+									</header>
+									<a class="image fit"><img src="images/dunttus_patterns_95.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="images/full_images/dunttus_patterns_95.PNG" target="_blank" class="button small">Link to full image</a></li>
+									</ul>
+								</article>
 							</section>
 			</div>
 			<!-- Copyright for site design -->
