Edit headlines to index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 					<div id="intro">
 						<h1>Joni Hakala<br />
 						Portfolio</h1>
-						<p>Olen 27-vuotias mies pääkaupunkiseudulta. Kiinnostuksen kohteisiin kuuluu aika paljolti 
+						<p>Opikelija pääkaupunkiseudulta. Kiinnostuksen kohteisiin kuuluu aika paljolti 
 						kaikki tietotekniikan aihe alueista. Harastuksiini kuullu mm. WordPress blogi kirjoitukset, 
 						<a href="https://www.hackthebox.eu/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, oman kotisivun ylläpito, virtuaali- palvelin 
-						asennukset ja koiran kanssa lenkkeily.</p>
+						asennukset, valokuvaus ja koiran kanssa lenkkeily.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -121,12 +121,12 @@
 								</article>
 								<article>
 										<header>
-												<span class="date">3.6.2019</span>
+												<span class="date">26.9.2020</span>
 												<h2>Windows<br />
 												asennukset</h2>
 										</header>
 										<a class="image fit"><img src="images/portfolio08.png" alt="" /></a>
-										<p>Opiskella Windows asennnuksia ja Active Directoryyn tunkeutumista ulkopuolelta. Käytetyt teknologiat mm. Windows 2019, Windows 10,.</p>
+										<p>Opiskella Windows asennnuksia ja Active Directoryyn tunkeutumista ulkopuolelta. Käytetyt teknologiat mm. Windows 2019, Windows 10, Kali Linux, Zerologin CVE-2020-1472 Exploit,.</p>
 										<ul class="actions special">
 												<li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
 										</ul>
