Updating portfolio with link to thesis

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 					<div id="intro">
 						<h1>Joni Hakala<br />
 						Portfolio</h1>
-						<p>Opikelija pääkaupunkiseudulta. Kiinnostuksen kohteisiin kuuluu aika paljolti 
-						kaikki tietotekniikan aihe alueista. Harastuksiini kuullu mm. WordPress blogi kirjoitukset, 
-						<a href="https://www.hackthebox.eu/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, oman kotisivun ylläpito, virtuaali- palvelin 
+						<p>Kiinnostuksen kohteisiin kuuluu aika paljolti 
+						kaikki tietotekniikan aihealueista. Harastuksiini kuullu mm. WordPress blogi kirjoitukset, 
+						<a href="https://www.hackthebox.eu/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, kotisivun ylläpito, virtuaalipalvelin 
 						asennukset, valokuvaus ja koiran kanssa lenkkeily.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -70,16 +70,19 @@
 							</article>
 						<!-- Posts -->
 							<section class="posts">
+								
+
 								<article>
 									<header>
-										<span class="date">18.11.2019</span>
-										<h2>ELK-Stack <br />
-										lokien keräys</h2>
+											<span class="date">24.6.2021</span>
+											<h2>Windows<br />
+											asennukset</h2>
 									</header>
-									<a class="image fit"><img src="images/portfolio02.jpg" alt="" /></a>
-									<p>Projektin tarkoitus kerätä keskitetysti lokietietoja ja tehdä lokitietojen perusteella varoituksia.</p>
+									<a class="image fit"><img src="images/portfolio08.jpg" alt="" /></a>
+									<p>Opinnäytetyö Microsoft Active Directory palvelimen tietoturvan parantaminen. Windows blog: Active Directory, Windows 2019, Windows 10, Kali Linux, Zerologin CVE-2020-1472 Exploit.</p>
 									<ul class="actions special">
-										<li><a href="https://hakala412609737.wordpress.com" target="_blank" class="button small">WordPress blogi</a></li>
+											<li><a href="https://www.theseus.fi/handle/10024/499451" target="_blank" class="button small">Opinnäytetyö</a></li>
+											<li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
 									</ul>
 								</article>
 								<article>
@@ -113,27 +116,27 @@
 										SaltStack</h2>
 									</header>
 									<a class="image fit"><img src="images/portfolio05.jpg" alt="" /></a>
-									<p>Keskitettysti hallittaan monta eri konetta, automatisoidaan ohjelmien asennukset ja päivitykset SALT tilojen kautta. Minion käyttöjärjestelmiä mm. Debian, Xubuntu, Windows 2016, Windows 10, MX Linux.</p>
+									<p>Keskitetysti hallittaan monta eri konetta, automatisoidaan ohjelmien asennukset ja päivitykset SALT tilojen kautta. Minion käyttöjärjestelmiä mm. Debian, Xubuntu, Windows 2016, Windows 10, MX Linux.</p>
 									<ul class="actions special">
 										<li><a href="https://jonihakala208450670.wordpress.com" target="_blank" class="button small">WordPress blogi</a></li>
 										<li><a href="https://github.com/Dunttus/SaltProject" target="_blank" class="button small">Github sivu</a></li>
 									</ul>
 								</article>
 								<article>
-										<header>
-												<span class="date">26.9.2020</span>
-												<h2>Windows<br />
-												asennukset</h2>
-										</header>
-										<a class="image fit"><img src="images/portfolio08.jpg" alt="" /></a>
-										<p>Opiskella Windows asennnuksia ja Active Directoryyn tunkeutumista ulkopuolelta. Käytetyt teknologiat mm. Windows 2019, Windows 10, Kali Linux, Zerologin CVE-2020-1472 Exploit,.</p>
-										<ul class="actions special">
-												<li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
-										</ul>
+									<header>
+										<span class="date">18.11.2019</span>
+										<h2>ELK-Stack <br />
+										lokien keräys</h2>
+									</header>
+									<a class="image fit"><img src="images/portfolio02.jpg" alt="" /></a>
+									<p>Projektin tarkoitus kerätä keskitetysti lokitietoja ja tehdä tietojen perusteella varoituksia.</p>
+									<ul class="actions special">
+										<li><a href="https://hakala412609737.wordpress.com" target="_blank" class="button small">WordPress blogi</a></li>
+									</ul>
 								</article>
 								<article>
 										<header>
-												<span class="date">9.6.2020</span>
+												<span class="date">24.6.2021</span>
 												<h2>Omat<br />
 												kuvio taustat</h2>
 										</header>
@@ -150,7 +153,7 @@
 										alkeet</h2>
 									</header>
 									<a class="image fit"><img src="images/portfolio06.jpg" alt="" /></a>
-									<p>Opiskella tunkeutumistestausen alkeet. Käytetyt teknologiat mm. Nmap, Vagrant, THCHydra, HashCat, SearchSploit, Gobuster, MitmProxy, FoxyProxy, EyeWitness, MetaSploit, HackTheBox.</p>
+									<p>Opiskella tunkeutumistestauksen alkeet. Käytetyt teknologiat mm. Nmap, Vagrant, THCHydra, HashCat, SearchSploit, Gobuster, MitmProxy, FoxyProxy, EyeWitness, MetaSploit, HackTheBox.</p>
 									<ul class="actions special">
 										<li><a href="https://hakala.home.blog" target="_blank" class="button small">WordPress blogi</a></li>
 									</ul>
