Adding new comments and dates

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 				<!-- Main -->
 					<div id="main">
 						<header class="major">
-							<h1>Uudet<br />
-								projektit</h1>
+							<h1>projektit</h1>
 						</header>
 						<!-- Featured Post -->
 							<article class="post featured">
@@ -74,12 +73,12 @@
 
 								<article>
 									<header>
-											<span class="date">5.8.2021</span>
+											<span class="date">5.9.2021</span>
 											<h2>Windows<br />
 											asennukset</h2>
 									</header>
 									<a class="image fit"><img src="images/portfolio08.jpg" alt="" /></a>
-									<p>Opinnäytetyö Microsoft Active Directory palvelimen tietoturvan parantaminen. Windows blog: Active Directory, Windows 2019, Windows 10, Kali Linux, Zerologin CVE-2020-1472 Exploit.</p>
+									<p>Opinnäytetyö Microsoft Active Directory palvelimen tietoturvan parantaminen. IT asennukset blogi: Active Directory, Windows 2019, Windows 10, Kali Linux, Zerologin CVE-2020-1472 Exploit, Docker, VSCode.</p>
 									<ul class="actions special">
 											<li><a href="https://www.theseus.fi/handle/10024/499451" target="_blank" class="button small">Opinnäytetyö</a></li>
 											<li><a href="https://hakalawindows.wordpress.com/blog-2/" target="_blank" class="button small">WordPress blogi</a></li>
@@ -94,7 +93,7 @@
 									<a class="image fit"><img src="images/portfolio03.jpg" alt="" /></a>
 									<p>Infrastructure as a service palvelimen pystytys, Apache2 kotisivun asennus, Domain nimen reititys ja Google App Engine React sivun käyttöönotto.</p>
 									<ul class="actions special">
-										<li><a href="https://jonihakala.home.blog/blog-feed/" target="_blank" class="button small">WordPress blogi</a></li>
+										<li><a href="https://jonihakala.home.blog/" target="_blank" class="button small">WordPress blogi</a></li>
 									</ul>
 								</article>
 								<article>
