--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<h1>Joni Hakala<br />
 						Portfolio</h1>
 						<p>Kiinnostuksen kohteisiin kuuluu aika paljolti 
-						kaikki tietotekniikan aihealueista. Harastuksiini kuullu mm. WordPress blogi kirjoitukset, 
+						kaikki tietotekniikan aihealueista. Harrastuksiini kuullu mm. WordPress blogi kirjoitukset, 
 						<a href="https://www.hackthebox.eu/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, kotisivun ylläpito, virtuaalipalvelin 
 						asennukset, valokuvaus ja koiran kanssa lenkkeily.</p>
 						<ul class="actions">
