--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						</ul>
 						<ul class="icons">							
 							<li><a href="https://github.com/Dunttus" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/dunttus/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
