--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						Portfolio</h1>
 						<p>Kiinnostuksen kohteisiin kuuluu aika paljolti 
 						kaikki tietotekniikan aihealueista. Harrastuksiini kuullu mm. WordPress blogi kirjoitukset, 
-						<a href="https://www.hackthebox.eu/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, kotisivun ylläpito, virtuaalipalvelin 
+						<a href="https://app.hackthebox.com/profile/137564" target="_blank">HackTheBox</a> tunkeutumistestaus lipunryöstöt, kotisivun ylläpito, virtuaalipalvelin 
 						asennukset, valokuvaus ja koiran kanssa lenkkeily.</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
